# aylik-fon-degisim

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/: routes.py
backend/app/core/: config.py  decimal_utils.py  normalization.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/: enums.py  kap.py  models.py
backend/app/schemas/: api.py
backend/app/services/: column_mapper.py  comparison_engine.py  file_security.py  kap_client.py  kap_sync.py  matching.py  parser.py  seed_data.py
backend/app/tests/: test_comparison_engine.py  test_decimal_utils.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vercel.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: dashboard.tsx
frontend/lib/: api.ts  format.ts
frontend/types/: api.ts
