[project]
name = "fund-portfolio-analyzer-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "openpyxl>=3.1.0",
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
  "camelot-py>=0.11.0",
  "rapidfuzz>=3.9.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "apscheduler>=3.10.4",
]

[project.optional-dependencies]
test = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
